src/styles/photoDetails.css
.photo-data-display {
    display: flex;
    margin-top: 70px;
    margin-left: -8px;
}

.title-and-photo {
    display: flex;
    width: fit-content;
    height: fit-content;
    background-color: rgba(0, 0, 0, 0.267);
    padding: 20px 20px 20px 70px;
    border-radius: 0px 5px 5px 0px;
}

.photo-title {
    font-family: "Orbitron", system-ui;
    font-size: 2rem;
    writing-mode: vertical-lr;
    transform: rotate(180deg);
    color: rgba(0, 0, 0, 0.5);
    padding-left: 10px;
}

.exif {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 50px;
    font-family: "Quicksand", system-ui;
    margin-top: -40px;
    margin-left: 50px;
}

.exif .exif-header-group {
    width: 600px;
}

.exif .exif-header-text {
    font-family: "Orbitron", system-ui;
    color: rgba(0, 0, 0, 0.7);
    font-size: 2rem;
    text-align: end;
}

.exif .exif-header-decor {
    width: 100%;
    height: 1.5px;
    background-color: #a29320;
}

.exif .camera-settings-map {
    display: flex;
    justify-content: flex-start;
    margin-left: 5px;
}

.exif .camera-settings-map .exif-details {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.exif .camera-settings-map .photo-map {
    margin-left: 60px;
}

.margin-bottom {
    margin-bottom: 5px;
}

.exif-symbol-group {
    display: flex;
    flex-direction: row;
}

.exif-symbols {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 1.5rem;
    margin: 0.15rem 0.75rem;
}

.exif-symbols-larger {
    font-size: 1.7rem;
    margin-left: 10px;
}

.exif-double {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.exif-data {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    font-size: 1rem;
}

.leaflet-container {
    height: 250px;
    width: 250px;
    border-radius: 50%;
    border: 2px solid rgba(0, 0, 0, 0.3);
    filter: grayscale(100%);
}

.tag {
    display: inline-block;
    color: rgba(0, 0, 0, 0.8);
    background-color: rgba(0, 0, 0, 0.1);
    margin: 2px;
    padding: 5px 8px;
    border-radius: 5px;
}

.tags-collection {
    display: flex;
    flex-wrap: wrap;
    /* margin-top: 50px; */
    padding: 5px;
    width: 600px;
}

/* Menu */

.menu-container-2 {
    position: absolute;
    top: 25px;
    left: 40px;
}

.menu-container-2 a {
    font-family: "Orbitron", system-ui;
    font-size: 2rem;
    text-decoration: none;
    color: rgba(0, 0, 0, 0.7);
}

.menu-header-2::before {
    display: inline-block;
    font-family: "Material Symbols Outlined", sans-serif;
    content: "\eac3";
    vertical-align: middle;
    border-left: 0.1em solid transparent;
    color: #a29320;
    transition: transform 0.3s ease-in-out;

}

.menu-header-2:hover::before {
    transform: translateX(-10px);
    transition: transform 0.3s ease-in-out;
}

